coding for the simulation but the phi could not be shown only w have changed

--- a/Module 5 homework.ipynb
+++ b/Module 5 homework.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -29,14 +29,286 @@
     "l = 1.\n",
     "h = 1.\n",
     "\n",
-    "dx = 1/(nx-1)\n",
+    "dx = l/(nx-1)\n",
     "dy = h/(ny-1)\n",
     "\n",
-    "l1_target = 1e-6\n",
-    "\n",
-    "def L1norm(new, old):\n",
+    "l1_target = 1e-6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "phi = numpy.zeros((ny, nx))\n",
+    "w = numpy.zeros((ny, nx))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       ..., \n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.]])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "phi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       ..., \n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.]])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "phi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       ..., \n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0., ...,  0.,  0.,  0.]])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def l1norm(new, old):\n",
     "    norm = numpy.sum(numpy.abs(new-old))\n",
     "    return norm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def stokesflow(phi, w, l1_target):\n",
+    "    l1_errorphi = 1\n",
+    "    l1_errorw = 1\n",
+    "    phin = numpy.empty_like(phi)\n",
+    "    wn = numpy.empty_like(w)\n",
+    "    while l1_errorphi > l1_target or l1_errorw > l1_target:\n",
+    "        phin = phi.copy()\n",
+    "        phi[1:-1,1:-1] = .25 * (phin[1:-1,2:] + phin[1:-1, :-2] \\\n",
+    "                        + phin[2:, 1:-1] + phin[:-2, 1:-1])\n",
+    "        # boundary condition\n",
+    "        phi[0, :] = 0\n",
+    "        phi[-1, :] = 0\n",
+    "        phi[:, 0] = 0\n",
+    "        phi[:, -1] = 0\n",
+    "        \n",
+    "        l1_errorphi = l1norm(phi, phin)\n",
+    "        \n",
+    "        wn = w.copy()\n",
+    "        w[1:-1,1:-1] = .25 * (wn[1:-1,2:] + wn[1:-1, :-2] \\\n",
+    "                       + wn[2:, 1:-1] + wn[:-2, 1:-1])\n",
+    "        # boundary condition\n",
+    "        #upper boundary\n",
+    "        w[0, :] = (-1/(2*dy**2))*(8*phi[1, :] - phi[2, :])\\\n",
+    "                  - 3*1.0/dy\n",
+    "        #right boundary\n",
+    "        w[:, -1] = (-1/(2*dx**2))*(8*phi[:, -2] - phi[:, -3])\\\n",
+    "                  - 3*0.0/dy\n",
+    "        \n",
+    "        #bottom boundary\n",
+    "        w[-1, :] = (-1/dy**2)*(4*phi[-1, :] - 2*phi[-3, :]-\\\n",
+    "                    2*phi[-2, :]) - 6*0.0/dy\n",
+    "        \n",
+    "        #left boundary\n",
+    "        w[:, 0] = (-1/dx**2)*(4*phi[:, 0] - 2*phi[:, 1]-\\\n",
+    "                    2*phi[:, 2]) - 6*0.0/dy\n",
+    "        \n",
+    "        l1_errorw = l1norm(w, wn)\n",
+    "    return phi, w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "        [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "        [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "        ..., \n",
+       "        [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "        [ 0.,  0.,  0., ...,  0.,  0.,  0.],\n",
+       "        [ 0.,  0.,  0., ...,  0.,  0.,  0.]]),\n",
+       " array([[ -0.00000000e+00,  -1.20000000e+02,  -1.20000000e+02, ...,\n",
+       "          -1.20000000e+02,  -1.20000000e+02,  -0.00000000e+00],\n",
+       "        [ -0.00000000e+00,  -5.99178693e+01,  -8.35537473e+01, ...,\n",
+       "          -8.35537473e+01,  -5.99178693e+01,  -0.00000000e+00],\n",
+       "        [ -0.00000000e+00,  -3.61177299e+01,  -5.96714818e+01, ...,\n",
+       "          -5.96714818e+01,  -3.61177299e+01,  -0.00000000e+00],\n",
+       "        ..., \n",
+       "        [ -0.00000000e+00,  -1.64791161e-01,  -3.28518159e-01, ...,\n",
+       "          -3.28518159e-01,  -1.64791161e-01,  -0.00000000e+00],\n",
+       "        [ -0.00000000e+00,  -8.21306859e-02,  -1.63731583e-01, ...,\n",
+       "          -1.63731583e-01,  -8.21306859e-02,  -0.00000000e+00],\n",
+       "        [ -0.00000000e+00,  -0.00000000e+00,  -0.00000000e+00, ...,\n",
+       "          -0.00000000e+00,  -0.00000000e+00,  -0.00000000e+00]]))"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stokesflow(phi, w, l1_target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'cm' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-51-c8b91d9fa232>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mpyplot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfigsize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# 12 is the total number of levels we used to plot the contour\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mpyplot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontourf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mw\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m12\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcmap\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mviridis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mpyplot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mxlabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'$x$'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mpyplot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mylabel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'$y$'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'cm' is not defined"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7fbdec779f60>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "x = numpy.linspace(0,1,nx)\n",
+    "y = numpy.linspace(0,1,ny)\n",
+    "pyplot.figure(figsize=(8,6))\n",
+    "# 12 is the total number of levels we used to plot the contour\n",
+    "pyplot.contourf(x, y, w, 12, cmap=cm.viridis)\n",
+    "pyplot.xlabel('$x$')\n",
+    "pyplot.ylabel('$y$')\n",
+    "pyplot.colorbar();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: 'w'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-52-ad452575f878>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mfig\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpyplot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0max\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_subplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0max\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_aspect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'w'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mpyplot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mphi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mpyplot\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolorbar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/gil/anaconda3/lib/python3.5/site-packages/matplotlib/axes/_base.py\u001b[0m in \u001b[0;36mset_aspect\u001b[0;34m(self, aspect, adjustable, anchor)\u001b[0m\n\u001b[1;32m   1221\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_aspect\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0maspect\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1222\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1223\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_aspect\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0maspect\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# raise ValueError if necessary\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1224\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1225\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0madjustable\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: could not convert string to float: 'w'"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYcAAAELCAYAAAAybErdAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAFD1JREFUeJzt3X+wZ3V93/HnC3YL3RGi8ktLBdl2RAi7oKmOLmFyg8Em\nM7HjYE0yozVYi4w/pmOsBU3ashFLxRGdGJuigZGkJJl0FRnTQnDQvbVRm/gD2F13V0jcyCjjD3QY\nWHcGgX33j3Mue/l+7t7v997v/X7v3e7zMfOds/vhfM55fz987/d1z/mcczZVhSRJ8x2z2gVIktYe\nw0GS1DAcJEkNw0GS1DAcJEkNw0GS1Bg5HJI8N8lfJjk4yYIkSatvpHBIcinwJWAjsKQbI5KsS3JN\nkj1JdiT5qyQXLqNWSdKUjHrk8O+BXwK+uIx9fBR4LXBhVW0GPgF8NsnmZWxLkjQFo4bDhVX1d0vd\neJIXAJcD/6WqfgxQVTcB+4D/vNTtSZKmY6RwqKrlzjNc2i9nB9o/D7wyyYZlbleSNEGTvlppE3AQ\neGCgfR+wDjh3wvuXJC3DpMPhZOBAtU/3e6RfnjTh/UuSlsH7HCRJjUmHw0PAhiQZaD+xX/5owvuX\nJC3DuglvfwfwG8DzePq8w1nAE8DuhTol8R+ZkKQlqqrBX8SXbUWPHJKcOnCU8Ol+OTOw6i8Cd1bV\ngcNtq6p8VXH11Veveg1r4eU4OBaOxeKvlbbUcDhsKiXZAjxId9MbAFV1H/Bx4D1JTurXeyPdnda/\ns+RqJUlTMdJppSQfAC6hOz1Ekq/3/+mlVfVE/+f9wMN0ATHf24GrgS8m+SnwKHBJVe0cs3ZJ0oSM\nFA5VdeUI6+ygu3R1sP1J4D/1Ly3RzMzMapewJjgOhzgWhzgWk5NJnKsaV5Jai3VJ0lqVhFqrE9KS\npP8/GA6SpIbhIElqGA6SpIbhIElqGA6SpIbhIElqGA6SpIbhIElqGA6SpIbhIElqGA6SpIbhIElq\nGA6SpIbhIElqGA6SpIbhIElqGA6SpIbhIElqGA6SpIbhIElqGA6SpIbhIElqGA6SpIbhIElqGA6S\npIbhIElqGA6SpIbhIElqGA6SpIbhIElqjBQOSU5JckuSvUn2JNmW5PQR+z4nyY19v3uS7EzyniTr\nxitdkjQpQ7+gk6wH7gL2Auf0zZ8Atie5oKoOLNI3wB3AscDLq+rhJBcAXwKeBVw5Zv2SpAkY5cjh\nMuA84MrqAVcBG4G3DOn7QuB84Maqehigqu4BPgu8brlFS5Ima5RwuBR4oKq+PddQVd8HdgOvGdL3\niX65fqB9Pd3RhCRpDRolHDYD+xZo3wdsWqxjVd0P/AlwRZIzAZJcDLwC+MjSSpUkTcsok8InA19d\noP0RYEOS46rqsUX6XwZ8CLg/yQ+AZwDvqKobllqsJGk6JnrFUJLj6CazjwXOqKrv9RPSn0ny7Kq6\ndpL7lyQtzyjh8BBwwgLtJwIHhhw1vAnYAlxUVd+DbkI6yQeBDyf5n1W1Y6GOW7duferPMzMzzMzM\njFCqJB0dZmdnmZ2dndj20118tMgKyR3A2VW1caB9B7C/qrYs0vcPgCuA51bVD+a1/zJwO3B5Vd20\nQL8aVpck6ZAkVFVWanujTEjfCpyZ5Ix5RZxGd8/DJweKO7W/t2HOXCCcwdM9HyjgR0stWJI0eaMc\nOawHvgLsAV5P96V+E93pohfN3QSXZAvwBeBjVfW2vu35wD3A/wX+ZVXt70Pmc/12Ni10WsojB0la\nmqkfOVTV48AlwJN09zZ8g+6Ko4sH7o7eDzwMPDiv798DLwV+DPxNknvo7pi+A/j5IfMVkqRVMvTI\nYTV45CBJS7Macw6SpKOM4SBJahgOkqSG4SBJahgOkqSG4SBJahgOkqSG4SBJahgOkqSG4SBJahgO\nkqSG4SBJahgOkqSG4SBJahgOkqSG4SBJahgOkqSG4SBJahgOkqSG4SBJahgOkqSG4SBJahgOkqSG\n4SBJahgOkqSG4SBJahgOkqSG4SBJahgOkqSG4SBJahgOkqTGSOGQ5JQktyTZm2RPkm1JTh91J0nO\nT3Jbkq/2/fcmuW75ZUuSJmloOCRZD9wFrAfOAc4FfgJsT7JhhP5bgNuB91fVP6uqc4CPAK8dp3BJ\n0uSkqhZfIbkcuAHYWFXf7ttOA74LXFVV1w/pvxu4sao+NK/tWOCXqurOw/SpYXVJkg5JQlVlxbY3\nQjjcAbywqs4aaN8B7K+qLYv0vQiYBc6tqm+OXJThIElLstLhMMqcw2Zg3wLt+4BNQ/q+vF8+s59z\n2JXkniTXJDl+KYVKkqZn3QjrnAx8dYH2R4ANSY6rqscO0/d5QIA/BX6tqr6WZBPdHMRLgF9eRs2S\npAmb9KWsxwNFN+fwNYCq2glcB1zSn3aSJK0xo4TDQ8AJC7SfCBxY5KgB4NF+ee9A+910RxQvGWH/\nkqQpG+W00g7g7AXazwJ2Dum7t18OhtCTh2l/ytatW5/688zMDDMzM0N2JUlHj9nZWWZnZye2/aVc\nynpWVT3Qt50GfIfuUtb5l6ieCvxw7lKjJP+YbuL66qq6doFtXlxV/3uBfXq1kiQtwWpcyroe+Aqw\nB3g93RzCTcAW4EVVdaBfbwvwBeBjVfW2ef2vB34D+IWq+tv+zurtwN9V1a8cZp+GgyQtwUqHw9DT\nSlX1eJJLgA8Du4GDwC663/oPzFt1P/Aw8ODAJt4F/BC4PckTdHdafxLYOnb1kqSJGHrksBo8cpCk\npVmNm+AkSUcZw0GS1DAcJEkNw0GS1DAcJEkNw0GS1DAcJEkNw0GS1DAcJEkNw0GS1DAcJEkNw0GS\n1DAcJEkNw0GS1DAcJEkNw0GS1DAcJEkNw0GS1DAcJEkNw0GS1DAcJEkNw0GS1DAcJEkNw0GS1DAc\nJEkNw0GS1DAcJEkNw0GS1DAcJEkNw0GS1DAcJEmNqYZDkvclOZjkDdPcryRpaUYKhySnJLklyd4k\ne5JsS3L6UnbUr/9bQC2nUEnS9AwNhyTrgbuA9cA5wLnAT4DtSTYsYV/XAp9bTpGSpOka5cjhMuA8\n4MrqAVcBG4G3jLKTJD8HbAF+H8jySpUkTcso4XAp8EBVfXuuoaq+D+wGXjPifj4I/Dbw0yVXKEma\nulHCYTOwb4H2fcCmYZ2TvBo4vqq2LbE2SdIqGSUcTgYeXaD9EWBDkuMO1zHJOuD9wDuXV54kaTVM\n+lLWtwK7qurLE96PJGkFrRthnYeAExZoPxE4UFWPLdQpyc8A7wYumt+85AolSVM3SjjsAM5eoP0s\nYOci/V4GPA5sSwJdMDyj/2/vTfIO4Naqet9Cnbdu3frUn2dmZpiZmRmhVEk6OszOzjI7Ozux7ae7\nMnWRFZLLgRuAs6rqgb7tNOA7wFVV9aF5654K/LAOs9EkvwBsB36zqv77Ivs83CYkSQtIQlWt2NmZ\nUeYcbqY7QrguybFJjqGbZP4WXWjMFbYFeBD46CLbysBSkrQGDQ2HqnocuAR4ku7ehm/QnR66uKoO\nzFt1P/AwXUA8Tf/4jbuBj9M9PuO9Sb6e5MXjvwVJ0kobelppNXhaSZKWZjVOK0mSjjKGgySpYThI\nkhqGgySpYThIkhqGgySpYThIkhqGgySpYThIkhqGgySpYThIkhqGgySpYThIkhqGgySpYThIkhqG\ngySpYThIkhqGgySpYThIkhqGgySpYThIkhqGgySpYThIkhqGgySpYThIkhqGgySpYThIkhqGgySp\nYThIkhqGgySpYThIkhqGgySpMVI4JDklyS1J9ibZk2RbktNH6PecJL+b5N4kO5LsTvKpJOeNX7ok\naVKGhkOS9cBdwHrgHOBc4CfA9iQbhnTfCvw68CtVtRm4AHgS+OskPztG3ZKkCRrlyOEy4DzgyuoB\nVwEbgbcM6XsQuK6qHgSoqp8C7wb+IfDm5RYtSZqsdN/1i6yQ3AG8sKrOGmjfAeyvqi2L9D2mqg4O\ntB0PHABuqao3HKZfDatLknRIEqoqK7W9UY4cNgP7FmjfB2xarONgMPTO7pfbR9i3JGkVjBIOJwOP\nLtD+CLAhyXFL3OebgV3ALUvsJ0maknXT3FmSVwCvBS6qqsenuW9J0uhGCYeHgBMWaD8ROFBVj42y\noyTnAzcDr6qqbw5bf+vWrU/9eWZmhpmZmVF2I0lHhdnZWWZnZye2/VEnpM+uqo0D7UMnpOetuxm4\nDXhdVX15hPWdkJakJViNCelbgTOTnDGviNPo7nn45EBxpybJQFsTDP3NcTeMW7wkaTJGOXJYD3wF\n2AO8HijgJmAL8KKqOtCvtwX4AvCxqnpb37YJ+BxdiHxx3mZPAf5FVV18mH165CBJS7DSRw5D5xyq\n6vEklwAfBnbT3di2C7h4Lhh6+4GHgQfntW0FTgKu6F/zzS67aknSRA09clgNHjlI0tKsxpyDJOko\nYzhIkhqGgySpYThIkhqGgySpYThIkhqGgySpYThIkhqGgySpYThIkhqGgySpYThIkhqGgySpYThI\nkhqGgySpYThIkhqGgySpYThIkhqGgySpYThIkhqGgySpYThIkhqGgySpYThIkhqGgySpYThIkhqG\ngySpYThIkhqGgySpYThIkhqGgySpMVI4JDklyS1J9ibZk2RbktNH7LsuyTV9vx1J/irJheOVLUma\npKHhkGQ9cBewHjgHOBf4CbA9yYYR9vFR4LXAhVW1GfgE8Nkkm5ddtSRpolJVi6+QXA7cAGysqm/3\nbacB3wWuqqrrF+n7AmAP8K+r6o/mte8C9lXVqw7Tr4bVJUk6JAlVlZXa3iinlS4FHpgLBoCq+j6w\nG3jNCH0BZgfaPw+8csQjD0nSlI0SDpuBfQu07wM2Dem7CTgIPLBA33V0p6i0iNnZ2dUuYU1wHA5x\nLA5xLCZnlHA4GXh0gfZHgA1JjhvS98AC54ge6ZcnjbD/o5of/o7jcIhjcYhjMTleyipJaowSDg8B\nJyzQfiLdUcFjQ/puSDI4SXJiv/zRCPuXJE3ZKFcr3QGcXVUbB9p3APurassifa8CrgXOqqoH5rV/\nBLgCeFZVHVign5cqSdISreTVSutGWOdW4IYkZ8x9wfeXsp4DXDV/xSSnAj+cN8fwabpwmAH+eN6q\nvwjcuVAwwMq+QUnS0o1yWulmYCdwXZJjkxwDvB/4Ft39DwAk2QI8SHfTGwBVdR/wceA9SU7q13sj\nsBH4nRV6D5KkFTY0HKrqceAS4Em6exu+ATwDuHjgN//9wMN0ATHf24FtwBf7U1H/BrikqnaOX74k\naRKGzjlIR4Ik7wN+G7isqv542PrSkSTJc+kePfTKqprKVaZTu5TVh/cdstyxSPKcJL+b5N5+HHYn\n+VSS86ZR9ySM87mYt43Tgd8CjujfdMYdiyTnJ7ktyVf7/nuTXDfJmidlzO+L5yS5se93T5KdSd6T\nZJQ51jUnyaXAl+hOxy/pMz7Wd2dVTfxF99C+e4E/B9K/bgbuAzaM0P8GYC/w7P7vb6J7+N/madS/\nVsZi3jj8o/7v/wD4H/1Y/Oxqv7dpfy7mbeePgM/Qnfp8w2q/r9UYC2AL3fPOXjav7a3At1b7vU1z\nLPp17wZ2AM/s2y4ADgAfWO33tszx+DLwT+iOHJ5cYt9lf3dO681d3v/gnjmv7TTgCeDfDen7gr7v\nbw607wL+YrX/x015LP4AeONA20a6R5T83mq/t2mOxbz1fw64n25e7OARHA5jjQXdfOA7B9qOBf75\nar+3aY4F3VWUB4F/O9B+G/Dd1X5vyxyPY/rlksJh3O/OaZ1W8uF9h4wzFm+vqk8MtM1dAPCslStx\nasYZizkfpJtr+OnKlzdVyx6LJBcBZwP/a357VT1ZVXdOoNZJG+dz8US/XD/Qvp4uLI84VXVwmV3H\n+u6cVjj48L5Dlj0Wh/mQnN0vt49Z12oY53NBklcDx1fVtpUubBWMMxYv75fP7OccdvXn2q9JcvyK\nVjkd4/yM3A/8CXBFkjMBklwMvAL4yArXudaN9d05rXDw4X2HjDMWC3kz3WHiLeMWtgqWPRb95OL7\ngXdOqLZpG+dz8Ty6c+1/ClxTVecB/wq4jO50ypFm3J+Ry4A7gPuTfIfuRt53VNW1K1rl2jfWd+cR\nOXuvTpJX0P0rexdVdz/K0eStwK6q+vJqF7IGHE93FcuNVfU1gKra2V+p9HtJLqqq/7OqFU5JHxx3\n0Z1COqOqvpfkAuAzSZ59FAbEsk3ryMGH9x0yzlg8Jcn5dFdwvKqqvrly5U3VssYiyc8A7+bpj285\n0h+5Ms7nYu637HsH2u+mG5eXjF/eVI0zFm+iu3LrXVX1PYCquodubuqao+yfJx7ru3Na4bADeP4C\n7WfRPZpjWN9j6A6dB/s+QTdJdSQZZywA6D/gnwZ+rar+euVKm7rljsXLgMeBbUm+nuRu4A/7//be\nvu0/rGilkzfO52Jvvxz8eX7yMO1r3ThjMXfPz98OtN/HkRmU4xjru3NaH5pbgTOTnDHXMO/hfZ+c\nv2KSUweS7tP9cmZgm4s+vG8NG2cs5oLhNuB1c6dU+pt+buDIs6yxqKo7q+rMqnpx/3oR3WNZAP5j\n3/a+Kb2HlTLO5+J2uonHwd+KN9GdbvrKRCqenHHG4gf98gye7vl0Y3GknWkY2Yp/d07pOt31wD3A\nn9GdCzyG7prdbzLvpha6w8EngP860P+/AXuAk/q/v5HuRo5N06h/rYwF3Q/7D+jud3jdvNc7gM+v\n9nub9udiYFszHNn3OYz7M3I93U1w/7T/++l0vy3fsdrvbZpjQRcCDwN/CTyjbzuD7l6Y+4DjVvv9\njTEuN3OY+xwm8d05lSOH8uF9TxlzLLbSXWFwBd0j0Ode13MEPjpiBT4Xc49ZuJvu6b/FodNKL550\n/StpBcbiXcDvA7cn2U13bfungFdPtvKVN85YVNXfAy8Ffgz8TZJ76K5cugP4+RpxTm8tSfKB/jP+\nq/3fv96/5l9QtOLfnT54T5LUONImqiRJU2A4SJIahoMkqWE4SJIahoMkqWE4SJIahoMkqWE4SJIa\nhoMkqWE4SJIa/w+YoDnnyMbuygAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7fbe0438aba8>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "fig = pyplot.figure()\n",
+    "ax = fig.add_subplot(1,1,1)\n",
+    "ax.set_aspect('w')\n",
+    "pyplot.imshow(phi)\n",
+    "pyplot.colorbar()\n",
+    "pyplot.show()"
    ]
   },
   {
